@@ -40,7 +40,8 @@ const hello_ext_entry_st ext_mod_dumbfw = {
 	.name = "ClientHello Padding",
 	.tls_id = 21,
 	.gid = GNUTLS_EXTENSION_DUMBFW,
-	.parse_type = GNUTLS_EXT_APPLICATION,
+	.client_parse_point = GNUTLS_EXT_APPLICATION,
+	.server_parse_point = GNUTLS_EXT_APPLICATION,
 	.validity = GNUTLS_EXT_FLAG_TLS | GNUTLS_EXT_FLAG_CLIENT_HELLO,
 	.recv_func = NULL,
 	.send_func = _gnutls_dumbfw_send_params,
