@@ -46,7 +46,8 @@ const hello_ext_entry_st ext_mod_srp = {
 	.name = "SRP",
 	.tls_id = 12,
 	.gid = GNUTLS_EXTENSION_SRP,
-	.parse_type = GNUTLS_EXT_TLS,
+	.client_parse_point = GNUTLS_EXT_TLS,
+	.server_parse_point = GNUTLS_EXT_TLS,
 	.validity = GNUTLS_EXT_FLAG_TLS | GNUTLS_EXT_FLAG_DTLS | GNUTLS_EXT_FLAG_CLIENT_HELLO,
 	.recv_func = _gnutls_srp_recv_params,
 	.send_func = _gnutls_srp_send_params,
