@@ -46,7 +46,8 @@ const hello_ext_entry_st ext_mod_supported_groups = {
 	.name = "Supported Groups",
 	.tls_id = 10,
 	.gid = GNUTLS_EXTENSION_SUPPORTED_GROUPS,
-	.parse_type = GNUTLS_EXT_TLS,
+	.client_parse_point = GNUTLS_EXT_TLS,
+	.server_parse_point = GNUTLS_EXT_TLS,
 	.validity = GNUTLS_EXT_FLAG_TLS | GNUTLS_EXT_FLAG_DTLS | GNUTLS_EXT_FLAG_CLIENT_HELLO |
 		    GNUTLS_EXT_FLAG_EE | GNUTLS_EXT_FLAG_TLS12_SERVER_HELLO,
 	.recv_func = _gnutls_supported_groups_recv_params,
